k8s/ingress/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: argocd-ingress
  namespace: argo-cd
  annotations: 
    kubernetes.io/ingress.class: traefik 
    cert-manager.io/cluster-issuer: letsencrypthttps
spec: 
  ingressClassName: traefik
  tls: 
  - hosts: 
    - argocd.cloudbysamar.com
    secretName: argocd-tls
  rules: 
   - host: argocd.cloudbysamar.com
     http: 
      paths: 
      - path: /
        pathType: Prefix 
        backend: 
         service:
          name: argo-cd-argocd-server
          port:
            number: 80
