k8s/ingress/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations: 
    kubernetes.io/ingress.class: traefik 
    cert-manager.io/cluster-issuer: letsencrypthttps
spec: 
  ingressClassName: traefik
  tls: 
  - hosts: 
    - grafana.cloudbysamar.com
    secretName: grafana-tls
  rules: 
   - host: grafana.cloudbysamar.com
     http: 
      paths: 
      - path: /
        pathType: Prefix 
        backend: 
         service:
          name: kube-prometheus-stack-grafana
          port:
            number: 80
