k8s/ingress/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations: 
    kubernetes.io/ingress.class: traefik 
    cert-manager.io/cluster-issuer: letsencrypthttps
spec: 
  ingressClassName: traefik
  tls: 
  - hosts: 
    - prometheus.cloudbysamar.com
    secretName: prometheus-tls
  rules: 
   - host: prometheus.cloudbysamar.com
     http: 
      paths: 
      - path: /
        pathType: Prefix 
        backend: 
         service:
          name: kube-prometheus-stack-prometheus
          port:
            number: 9090
